# glucose_monitoring

./: .gitignore  LICENSE  README.md  cli.py  data.py  export.py  get_sensor.py  main.py  metrics.py  plot.py  pyproject.toml  report.py  requirements.txt
.github/workflows/: lint.yml  pypi-publish.yml
agp/: __init__.py  __main__.py  api.py  cli.py  config.py  data.py  export.py  main.py  metrics.py  pdf.py  plot.py  report.py
tests/: test_api.py  test_cli.py  test_config.py  test_data.py  test_export.py  test_metrics.py  test_pdf.py  test_plot.py  test_report.py
