[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agp"
version = "1.0.0"
description = "Ambulatory glucose profile analysis tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.1",
    "odfpy>=1.4.1",
    "Pillow>=9.0.0",
    "fpdf2>=2.7.0",
]

[project.scripts]
agp = "agp.main:main"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agp*"]
